Changes to About Us

--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,10 @@
           <b>Deals</b>
         </div>
         <nav>
-          <a href="home.html" class="links"><p>Home</p></a>
-          <a href="about.html" class="links">About Us</a>
-          <a href="login.html" class="links">Login</a>
-          <a href="contact.html" class="links current">Contact Us</a>
+          <a href="./home.html" class="links"><p>Home</p></a>
+          <a href="./about.html" class="links">About Us</a>
+          <a href="./login.html" class="links">Login</a>
+          <a href="./contact.html" class="links current">Contact Us</a>
         </nav>
         <button class="menu">
           <i class="fa-solid fa-bars menuBtn"></i>
