--- a/home.html
+++ b/home.html
@@ -30,10 +30,10 @@
           <b>Deals</b>
         </div>
         <nav>
-          <a href="home.html" class="links current"><p>Home</p></a>
-          <a href="about.html" class="links">About Us</a>
-          <a href="login.html" class="links">Login</a>
-          <a href="contact.html" class="links">Contact Us</a>
+          <a href="./home.html" class="links current"><p>Home</p></a>
+          <a href="./about.html" class="links">About Us</a>
+          <a href="./login.html" class="links">Login</a>
+          <a href="./contact.html" class="links">Contact Us</a>
         </nav>
         <button class="menu">
           <i class="fa-solid fa-bars menuBtn"></i>
@@ -169,23 +169,15 @@
                 <h2>NEW YORK</h2>
                 <span></span>
               </div>
-              <div class="city__search">
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Hotels</p>
+              <div class="pick__deals">
+                <div class="pick">
+                  <p>PICK THIS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Flights</p>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find cars</p>
-                </div>
-              </div>
-              <div class="see__deals">
-                <p>SEE DEALS</p>
-                <i class="fas fa-thin fa-angle-right"></i>
               </div>
             </div>
           </div>
@@ -198,23 +190,15 @@
                 <h2>SYDNEY</h2>
                 <span></span>
               </div>
-              <div class="city__search">
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Hotels</p>
+              <div class="pick__deals">
+                <div class="pick">
+                  <p>PICK THIS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Flights</p>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find cars</p>
-                </div>
-              </div>
-              <div class="see__deals">
-                <p>SEE DEALS</p>
-                <i class="fas fa-thin fa-angle-right"></i>
               </div>
             </div>
           </div>
@@ -228,23 +212,15 @@
                 <h2>PARIS</h2>
                 <span></span>
               </div>
-              <div class="city__search">
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Hotels</p>
+              <div class="pick__deals">
+                <div class="pick">
+                  <p>PICK THIS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Flights</p>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find cars</p>
-                </div>
-              </div>
-              <div class="see__deals">
-                <p>SEE DEALS</p>
-                <i class="fas fa-thin fa-angle-right"></i>
               </div>
             </div>
           </div>
@@ -258,23 +234,15 @@
                 <h2>TOKYO</h2>
                 <span></span>
               </div>
-              <div class="city__search">
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Hotels</p>
+              <div class="pick__deals">
+                <div class="pick">
+                  <p>PICK THIS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Flights</p>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find cars</p>
-                </div>
-              </div>
-              <div class="see__deals">
-                <p>SEE DEALS</p>
-                <i class="fas fa-thin fa-angle-right"></i>
               </div>
             </div>
           </div>
@@ -288,23 +256,15 @@
                 <h2>OSLO</h2>
                 <span></span>
               </div>
-              <div class="city__search">
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Hotels</p>
+              <div class="pick__deals">
+                <div class="pick">
+                  <p>PICK THIS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find Flights</p>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <p>Find cars</p>
-                </div>
-              </div>
-              <div class="see__deals">
-                <p>SEE DEALS</p>
-                <i class="fas fa-thin fa-angle-right"></i>
               </div>
             </div>
           </div>
@@ -336,7 +296,6 @@
       <div class="canyon__deals">
         <div class="canyon">
           <p>Pick this Destination</p>
-          <div class="overlay"></div>
           <img src="./img/p1.jpeg" alt="" />
           <div class="canyon--text">
             <h4>8-Day Guided Gran Canyon, Bryce & Zion Tour</h4>
