--- a/home.html
+++ b/home.html
@@ -268,6 +268,9 @@
               </div>
             </div>
           </div>
+          <button class="slider__btn slider__btn--left">&larr;</button>
+          <button class="slider__btn slider__btn--right">&rarr;</button>
+          <div class="dots"></div>
         </div>
         <button class="view__more">VIEW MORE</button>
       </section>
