added responsive design to slide Show

--- a/home.html
+++ b/home.html
@@ -268,9 +268,11 @@
               </div>
             </div>
           </div>
-          <button class="slider__btn slider__btn--left">&larr;</button>
-          <button class="slider__btn slider__btn--right">&rarr;</button>
-          <div class="dots"></div>
+          <div class="arrows__dots">
+            <button class="slider__btn slider__btn--left">&larr;</button>
+            <button class="slider__btn slider__btn--right">&rarr;</button>
+            <div class="dots"></div>
+          </div>
         </div>
         <button class="view__more">VIEW MORE</button>
       </section>
