Changes made to Login and About Us Page

--- a/contact.html
+++ b/contact.html
@@ -69,12 +69,13 @@
         </div>
         <div class="pitch__us">
           <h1>Pitch Us</h1>
-          <p>Hello,</p>
-          <p>
-            Our company dunhill and our e-mail address is
-            <span>dunhill@gmail.com</span> and we would like to discuss about
-            your next travel.
-          </p>
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="5"
+            placeholder="Impress Us..."
+          ></textarea>
           <button>Send</button>
         </div>
       </div>
