--- a/login.html
+++ b/login.html
@@ -62,13 +62,13 @@
             </div>
           </div>
         </div>
-        <div class="login__form hidden">
-          <button class="back"><- back to login</button>
+        <div class="login__form hidden" id="register">
+          <button class="back"><- Login Page</button>
           <h1>Register to Dunhill travel</h1>
           <form>
-            <input type="text" placeholder="User" id="perdoruesi" />
+            <input type="text" placeholder="Username" id="perdoruesi" />
             <div class="error error-perdoruesi"></div>
-            <input type="text" placeholder="Firstname && Lastname" id="emri" />
+            <input type="text" placeholder="Full Name" id="emri" />
             <div class="error error-emri"></div>
             <input type="email" placeholder="Email" id="emaili" />
             <div class="error error-emaili"></div>
