Changes to Login and Contact Page

--- a/contact.html
+++ b/contact.html
@@ -69,13 +69,15 @@
         </div>
         <div class="pitch__us">
           <h1>Pitch Us</h1>
-          <textarea
-            name=""
-            id=""
-            cols="30"
-            rows="5"
-            placeholder="Impress Us..."
-          ></textarea>
+          <form action="">
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="5"
+              placeholder="Impress Us..."
+            ></textarea>
+          </form>
           <button>Send</button>
         </div>
       </div>
