--- a/home.html
+++ b/home.html
@@ -184,7 +184,7 @@
 
           <!-- sydney image -->
           <div class="image__container">
-            <img src="img/sydney.webp" alt="" class="sydney" />
+            <img src="img/sydneyi.jpeg" alt="" class="sydney" />
             <div class="overlay overlay__sydney">
               <div class="title">
                 <h2>SYDNEY</h2>
@@ -228,7 +228,7 @@
           <!-- tokyo image -->
 
           <div class="image__container">
-            <img src="img/tokyo.webp" alt="" class="tokyo" />
+            <img src="img/tokyoi.jpeg" alt="" class="tokyo" />
             <div class="overlay overlay__tokyo">
               <div class="title">
                 <h2>TOKYO</h2>
