--- a/about.html
+++ b/about.html
@@ -19,14 +19,14 @@
       rel="stylesheet"
     />
     <script defer src="about.js"></script>
-    <title>Document</title>
+    <title>Holiday Website - About</title>
   </head>
   <body>
     <div class="banner">
       <header>
         <div class="company__name">
-          <h2>Dunhill</h2>
-          <span class="travel_title"><b>Travel</b></span>
+          <h2>Holiday</h2>
+          <span class="travel_title"><b>Website</b></span>
           <b>Deals</b>
         </div>
         <nav>
@@ -60,12 +60,13 @@
             </div>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-            quibusdam illo aut labore maiores tenetur minima eum rem obcaecati
-            cumque? Adipisci voluptas, obcaecati voluptates velit vero, ipsum
-            saepe molestiae libero nam eligendi beatae reiciendis eaque eveniet
-            nostrum neque alias repellat! Illum molestiae, reprehenderit illo
-            error facilis quis odit officiis quisquam.
+            At Holiday Website Deals, we are passionate about helping people
+            explore the world. Our mission is to make travel accessible and
+            enjoyable for everyone. We specialize in finding and selecting
+            holidays based on your preferences and selections. Our committment
+            to our work has earned us many valuable long-term customers, and we
+            are thrilled to have more people to help achieve their dreams of
+            visiting the world.
           </p>
         </div>
         <div class="boat--img" onclick="window.location='./contact.html'">
@@ -86,24 +87,24 @@
           <i class="fas fa-sun fa-4x"></i>
           <h4>Tours Guide</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            veniam dolor placeat assumenda aliquid pariatur!
+            Our team consists of many cheerful and enthusiastic tour guides to
+            be there with you in your dream adventure.
           </p>
         </div>
         <div class="safety__safe">
           <i class="fas fa-fire fa-4x"></i>
           <h4>Safety Safe</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            veniam dolor placeat assumenda aliquid pariatur!
+            We believe that travel should be sustainable and responsible, and
+            we're committed to minimize our impact on the environment.
           </p>
         </div>
         <div class="clear__price">
           <i class="fas fa-mountain fa-4x"></i>
           <h4>Clear Price</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            veniam dolor placeat assumenda aliquid pariatur!
+            One of our priorities as a team is to make our prices affordable and
+            reasonable so that everyone gets the dream vacation they deserve.
           </p>
         </div>
       </div>
@@ -123,8 +124,8 @@
     <footer>
       <div class="footer__content">
         <div class="company__name">
-          <h2>Dunhill</h2>
-          <span class="travel_title--footer"><b>Travel</b></span>
+          <h2>Holiday</h2>
+          <span class="travel_title--footer"><b>Website</b></span>
           Deals
         </div>
         <div class="footer__sections">
@@ -178,7 +179,7 @@
           <p>PRIVACY POLICY</p>
           <p>TERMS & CONDITIONS</p>
         </div>
-        <p>DUNHILL TRAVEL DEALS &copy; 2023</p>
+        <p>HOLIDAY WEBSITE DEALS &copy; 2023</p>
       </div>
     </footer>
   </body>
