--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,14 @@
       rel="stylesheet"
     />
     <script defer src="contact.js"></script>
-    <title>Holiday Website</title>
+    <title>Holiday Website - Contact</title>
   </head>
   <body>
     <div class="banner">
       <header>
         <div class="company__name">
-          <h2>Dunhill</h2>
-          <span class="travel_title"><b>Travel</b></span>
+          <h2>Holiday</h2>
+          <span class="travel_title"><b>Website</b></span>
           <b>Deals</b>
         </div>
         <nav>
@@ -63,7 +63,7 @@
             </div>
             <div class="address">
               <i class="fas fa-location-dot"></i>
-              <p>Sali Ceku 35 4th floor, ap. 10, Ferizaj</p>
+              <p>Prishtina</p>
             </div>
           </div>
         </div>
