--- a/home.html
+++ b/home.html
@@ -19,14 +19,14 @@
       rel="stylesheet"
     />
     <script defer src="home.js"></script>
-    <title>Holiday Website</title>
+    <title>Holiday Website - Home</title>
   </head>
   <body>
     <div class="banner">
       <header>
         <div class="company__name">
-          <h2>Dunhill</h2>
-          <span class="travel_title"><b>Travel</b></span>
+          <h2>Holiday</h2>
+          <span class="travel_title"><b>Website</b></span>
           <b>Deals</b>
         </div>
         <nav>
@@ -303,30 +303,30 @@
           <p>Pick this Destination</p>
           <img src="./img/p1.jpeg" alt="" />
           <div class="canyon--text">
-            <h4>8-Day Guided Gran Canyon, Bryce & Zion Tour</h4>
+            <h4>8-Day Guided Canyon, Bryce Tour</h4>
             <div class="price">
               <p>ACTIVE, ADVENTUROUS</p>
-              <h4>$ 2399</h4>
+              <h4>$ 2,399</h4>
             </div>
           </div>
         </div>
         <div class="canyon">
           <img src="./img/p2.jpeg" alt="" />
           <div class="canyon--text">
-            <h4>8-Day Guided Gran Canyon, Bryce & Zion Tour</h4>
+            <h4>3-Day Guided Tour</h4>
             <div class="price">
-              <p>ACTIVE, ADVENTUROUS</p>
-              <h4>$ 2399</h4>
+              <p>ACTIVE, TOUR</p>
+              <h4>$ 2,099</h4>
             </div>
           </div>
         </div>
         <div class="canyon">
           <img src="./img/p3.jpeg" alt="" />
           <div class="canyon--text">
-            <h4>8-Day Guided Gran Canyon, Bryce & Zion Tour</h4>
+            <h4>5-Day Venice Tour</h4>
             <div class="price">
-              <p>ACTIVE, ADVENTUROUS</p>
-              <h4>$ 2399</h4>
+              <p>TOUR, ADVENTUROUS</p>
+              <h4>$ 1,799</h4>
             </div>
           </div>
         </div>
@@ -335,8 +335,8 @@
     <footer>
       <div class="footer__content">
         <div class="company__name">
-          <h2>Dunhill</h2>
-          <span class="travel_title--footer"><b>Travel</b></span>
+          <h2>Holiday</h2>
+          <span class="travel_title--footer"><b>Website</b></span>
           Deals
         </div>
         <div class="footer__sections">
@@ -391,7 +391,7 @@
           <p>PRIVACY POLICY</p>
           <p>TERMS & CONDITIONS</p>
         </div>
-        <p>DUNHILL TRAVEL DEALS &copy; 2023</p>
+        <p>HOLIDAY WEBSITE DEALS &copy; 2023</p>
       </div>
     </footer>
   </body>
