--- a/login.html
+++ b/login.html
@@ -19,14 +19,14 @@
       rel="stylesheet"
     />
     <script defer src="login.js"></script>
-    <title>Holiday Website</title>
+    <title>Holiday Website - Login</title>
   </head>
   <body>
     <div class="banner">
       <header>
         <div class="company__name">
-          <h2>Dunhill</h2>
-          <span class="travel_title"><b>Travel</b></span>
+          <h2>Holiday</h2>
+          <span class="travel_title"><b>Website</b></span>
           <b>Deals</b>
         </div>
         <nav>
@@ -41,7 +41,7 @@
       </header>
       <div class="login__register">
         <div class="login__form login">
-          <h1>Log in to Dunhill travel</h1>
+          <h1>Log in to Holiday Website</h1>
           <form action="">
             <input type="email" placeholder="Email" id="email" />
             <div class="error error-email"></div>
@@ -64,7 +64,7 @@
         </div>
         <div class="login__form hidden" id="register">
           <button class="back"><- Login Page</button>
-          <h1>Register to Dunhill travel</h1>
+          <h1>Register to Holiday Website</h1>
           <form>
             <input type="text" placeholder="Username" id="perdoruesi" />
             <div class="error error-perdoruesi"></div>
