--- a/about.html
+++ b/about.html
@@ -168,10 +168,10 @@
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-youtube"></i>
         </div>
-        <div class="enter--email">
+        <form class="enter--email">
           <input type="email" placeholder="Get the best offers" />
           <i class="fas fa-paper-plane"></i>
-        </div>
+        </form>
       </div>
       <hr />
       <div class="conditions">
