--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
           <h1>Explore</h1>
           <h2>The World</h2>
         </div>
-        <div class="search__holiday--inputs">
+        <form class="search__holiday--inputs">
           <div class="search">
             <i class="fa-solid fa-earth-americas fa-xl"></i>
             <input type="search" placeholder="Your Destination or Hotel" />
@@ -72,7 +72,7 @@
               SEARCH FOR MY HOLIDAY
             </button>
           </div>
-        </div>
+        </form>
         <div class="bora__bora">
           <p>Bora Bora</p>
           <div class="search__borabora">
@@ -99,7 +99,7 @@
             <button>CRUISE</button>
             <button>TOURS</button>
           </div>
-          <div class="travel__planning--informations">
+          <form class="travel__planning--informations">
             <div class="where_to">
               <p>Where to?</p>
               <div>
@@ -134,7 +134,7 @@
               </div>
             </div>
             <button>FIND A HOLIDAY</button>
-          </div>
+          </form>
         </div>
         <div class="travel__planning--icons">
           <div class="dots__icon">
@@ -284,13 +284,13 @@
       <div class="newsletter__info">
         <h1>Subscribe to our Newsletter</h1>
         <p>Get to know the latest offers</p>
-        <div class="newsletter__input">
+        <form class="newsletter__input">
           <div class="inp">
             <i class="fa-solid fa-envelope"></i>
             <input type="email" placeholder="Email..." />
           </div>
           <button>SUBSCRIBE</button>
-        </div>
+        </form>
       </div>
     </section>
     <section class="travel__deals">
@@ -380,10 +380,10 @@
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-youtube"></i>
         </div>
-        <div class="enter--email">
+        <form class="enter--email">
           <input type="email" placeholder="Get the best offers" />
           <i class="fas fa-paper-plane"></i>
-        </div>
+        </form>
       </div>
       <hr />
       <div class="conditions">
