--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
       <!-- the other section -->
       <div class="what-we-offer-section">
-        <div class="passport" onclick="window.location='/home.html'">
+        <div class="passport" onclick="window.location='./home.html'">
           <img src="./img/pasport.jpeg" alt="" />
           <p>Pick a Holiday</p>
           <div class="overlay"></div>
